--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "humanaidfoundation",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@e-mine/react-native-html-text": "^0.3.3",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "axios": "^1.2.5",
+    "@stripe/stripe-react-native": "^0.19.0",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
+    "expo-device": "~5.0.0",
+    "expo-notifications": "~0.17.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "native-notify": "^3.0.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-alert-notification": "^0.3.4",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
